// Copyright 2025 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;
option go_package = "github.com/pipe-cd/pipecd/pkg/model";

import "validate/validate.proto";

message DeploymentTrace {
    string id = 1 [(validate.rules).string.min_len = 1];
    string title = 2;
    string commit_message = 3;
    string commit_hash = 4 [(validate.rules).string.min_len = 1];
    string commit_url = 5 [(validate.rules).string.min_len = 1];
    int64 commit_timestamp = 6 [(validate.rules).int64.gte = 0];
    string author = 7;

    int64 created_at = 101 [(validate.rules).int64.gte = 0];
    int64 updated_at = 102 [(validate.rules).int64.gte = 0];
}